diesel_compile_tests/tests/fail/derive/bad_column_name.stderr
error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_column_name.rs:14:25
   |
14 |     #[diesel(column_name)]
   |                         ^
   |
   = help: The correct format looks like `#[diesel(column_name = foo)]`

error: expected `=`
  --> tests/fail/derive/bad_column_name.rs:21:25
   |
21 |     #[diesel(column_name(another))]
   |                         ^

error: expected string literal
  --> tests/fail/derive/bad_column_name.rs:28:28
   |
28 |     #[diesel(column_name = true)]
   |                            ^^^^
